# 2026-1-CECD1-3-JeonYeoGyeong-11

./: .gitattributes  .gitignore  CHANGELOG.md  MIGRATION.md  PHASE2_GRAPH_INFORMATIVENESS_REPORT.md  PHASE2_GRAPH_INFORMATIVENESS_n20_a0p3_signed_seed42.md  PHASE2_GRAPH_INFORMATIVENESS_pfedsim_like.md  PHASE3_DOMINANCE_AWARE_REPORT.md  README.md  pyproject.toml  requirements.txt  run_experiment.py  run_general_client_count_sweep.py  run_general_experiment.py  run_general_stress_grid.py  run_general_suite.py  run_graph_ablation.py  run_vision_client_count_sweep.py  run_vision_experiment.py  run_vision_stress_grid.py  run_vision_suite.py
.github/workflows/: ci.yml  nightly.yml
configs/: README.md  cora_graph_ablation_smoke.json  general_diagnostic_smoke.json  general_extension_smoke.json
docs/: EXPERIMENT_DESIGN.md  EXPERIMENT_RESULTS.md  README.md  SEMANTIC_CLIENT_GRAPH_ROADMAP.md  capstone-prior-work-positioning.md  deep-research-report.md  evidence.md  fl_research_total_review_pathology_graph.md  framework.md  history.md  maintenance.md  removed-materials.md  repository.md  research.md  structure.md
docs/archive/: README.md
docs/demos/: graphfl-assembly-mock-system.js  graphfl-assembly-scratch.css  graphfl-assembly-scratch.html  graphfl-assembly-scratch.js  graphfl-authoring-capabilities.js
docs/framework/: claim.md  cleanup-plan.md  components.md  diagnostics.md  evidence.md  experiment-results.md  experimental-design.md  extension-guide.md  graph_evidence_poster_report.md  graph_fl_experimental_design.md  graph_fl_experimental_design_appendix.md  graph_fl_framework_quality_evidence.md  graph_fl_framework_quality_provenance.md  interfaces.md  lifecycle.md  metrics.md  naming-and-compatibility.md  overview.md  prior-work-mapping.md  project-prompt.md
docs/maintenance/: cleanup-status.md  gate-6-prep.md  last_gate_check.json  last_nightly_run.json  line-budget-allowlist.txt  migration-and-compatibility.md  rename-inventory.md
docs/research/: design-pattern-survey.md  framework-design-notes.md  prior-work-review.md
graphfl_lab/: __init__.py  aggregation.py  config_io.py  flower_app.py  flower_runner.py  general_client.py  general_models.py  general_suite_variants.py  model.py  projection.py  strategy.py  suite_stats.py  update_graph.py
graphfl_lab/app/: __init__.py  config.py  data_cache.py
graphfl_lab/cli/: __main__.py  aggregation_targets.py  argparse_types.py  authoring.py  cora_experiment.py  experiment_dispatcher.py  general_stress_grid.py  graph_ablation.py  main.py  vision_client_count_sweep.py  vision_experiment.py  vision_stress_grid.py  vision_suite.py
graphfl_lab/clients/: cora.py  vision.py
graphfl_lab/corrections/: __init__.py  graph_free.py
graphfl_lab/data/: __init__.py  cora.py  vision.py
graphfl_lab/designs/: design.py  presets.py
graphfl_lab/diagnostics/: __init__.py  evidence_bundle.py  result_schema.py  schema.py
graphfl_lab/experiments/: __init__.py  client_count_sweep.py  graph_ablation.py  stress_grid.py  suite.py
scripts/: aggregate_graph_ablation.py  deep_dive_general.py  deep_dive_seed.py  merge_general_fedavg_ours.py  spectral_decomposition_report.py
scripts/dev/: golden.py  (+2 more)
spectral_fl/: __init__.py  aggregation.py  client.py  config_io.py  data.py  flower_app.py  flower_runner.py  general_client.py  general_data.py  general_models.py  general_suite_variants.py  model.py  projection.py  spectral_diagnostics.py  strategy.py  suite_stats.py  update_graph.py
tests/: test_aggregation.py  test_config_io.py  test_spectral_diagnostics.py  test_update_graph.py
(+409 files in other folders)
