[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-client-update-graph"
version = "0.1.0"
description = "Spectral client update graph experiments for federated learning"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
  "flwr[simulation]>=1.13,<2.0",
  "torch>=2.2,<3.0",
  "torchvision>=0.17,<1.0",
  "torch-geometric>=2.5,<3.0",
  "numpy>=1.24,<3.0",
  "scipy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["spectral_fl*"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "spectral_fl.flower_app:server_app"
clientapp = "spectral_fl.flower_app:client_app"

[tool.flwr.app.config]
track = "general-fl"
method = "ours"
dataset = "fashionmnist"
model = "mlp"
num-clients = 5
rounds = 3
local-epochs = 1
batch-size = 64
hidden-dim = 64
lr = 0.01
momentum = 0.9
weight-decay = 0.0005
compression-dim = 256
compression-seed = 0
ema-alpha = 0.8
tau-gain = 2.0
tau-max = 2.0
conflict-mix = 0.2
warmup-rounds = 2
graph-mode = "dense"
graph-source = "update"
aggregation-target = "update"
knn-k = 2
edge-threshold = 0.0
graph-seed = 0
use-ema-graph = true
disable-adaptive-tau = false
fixed-tau = 1.0
diagnostic-only = false
e-std-threshold = 0.0
min-client-weight = 0.0
seed = 42
data-root = "./data/torchvision"
out-dir = "./experiments_current/app_smoke"
run-tag = ""
partition = "dirichlet"
dirichlet-alpha = 0.1
train-subset-size = 0
test-subset-size = 0
projection-dim = 0
